fix: correct footer padding on mobile
p1-web-dev-portfolio

--- a/p1-web-dev-portfolio/src/stylesheets/index.css
+++ b/p1-web-dev-portfolio/src/stylesheets/index.css
@@ -216,8 +216,15 @@ html {
 @media only screen and (max-width: 1000px) {
   .main {
     max-width: 100%;
-    padding-bottom: 4rem;
+    padding-bottom: 4em;
   }
+}
+
+@media only screen and (max-width: 680px) {
+  .main {
+    padding-bottom: 1em;
+  }
+  
 }
 
 .section--column {
